@@ -28,7 +28,6 @@ tasks.processResources {
     filesMatching("fabric.mod.json") { expand("version" to version) }
 }
 tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--add-modules=jdk.incubator.vector")
     options.release = 25
 }
 java { withSourcesJar(); sourceCompatibility = JavaVersion.VERSION_25; targetCompatibility = JavaVersion.VERSION_25 }
