@@ -43,7 +43,6 @@ tasks.processResources {
 }
 
 tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--add-modules=jdk.incubator.vector")
     options.release = 25
 }
 java { withSourcesJar(); sourceCompatibility = JavaVersion.VERSION_25; targetCompatibility = JavaVersion.VERSION_25 }
